--- a/registration_online.html
+++ b/registration_online.html
@@ -108,20 +108,15 @@
             <div class="detail-title">
                 <h2 class="ps-4">家長講座：溫習策略</h2>
          </div>
-         <div class="detail-back">
-            <a href="dashboard_event_detail.html">
-              <i class="fa-solid fa-chevron-left"></i>
-              <span>返回</span>
-            </a>
-      </div>
         </div>
       </section>
-
       
-      <section class="">
-        <div class="container">
-          <div class="d-flex justify-content-center align-content-center">
-         
+      <section class="register-page-mobile">
+          <div class="d-flex align-items-center flex-column register-page-title">
+         <h2>網上報名</h2>
+         <h3>已成功報名！</h3>
+         <p>稍後會將登記資料發送到登記的電郵</p>
+         <p>活動當日請用QR code入場</p>
           </div>
             <div class="d-flex justify-content-center align-content-center ">
                 <div class="online-register-page">
@@ -158,13 +153,12 @@
                    </div>
                  </div>
                  <div class="record-btn">
-              <button class="btn orange-btn">下載QRCode</button>
-              <button class="btn blue-btn">新增至日曆</button>
-              <button class="btn green-btn">查看紀錄</button>
+              <a href="#" class="btn orange-btn">下載QRCode</a>
+              <a href="#" class="btn blue-btn">新增至日曆</a>
+              <a href="event_registration.html" class="btn green-btn">查看紀錄</a>
                  </div> 
             </div>
             </div>
-        </div>
       </section>
 
       <footer class="mb-0">
