--- a/dashboard_event_detail.html
+++ b/dashboard_event_detail.html
@@ -56,7 +56,7 @@
                       <h3>活動概覽</h3>
                     </div>
                   </a>
-                  <a href="#" class="main-left-data">
+                  <a href="edmall.html" class="main-left-data">
                     <img src="assets/images/main2.png" alt="" />
                     <div class="main-border">
                       <h3>EdMall</h3>
