--- a/edmall.html
+++ b/edmall.html
@@ -370,7 +370,7 @@
               </div>
               <h2 class="edmall-pop2">已經成功遞交申請</h2>
               <p class="edmall-pop2">可到報價紀錄查看報價進度</p>
-              <button class="btn pop2-btn">查看報價紀錄</button>
+              <a href="quotation.html" class="btn pop2-btn">查看報價紀錄</a>
                </div>
       </div>
       </div>
