--- a/event_registration.html
+++ b/event_registration.html
@@ -88,15 +88,15 @@
                   </div>
                 </div>
                 <div class="modal-body">
-                   <ul class="modal-list">
-                    <li><h3>活動概覽</h3>
-                      <a href="#"><i class="fa-solid fa-chevron-right"></i></a></li>
-                    <li class="no-space"><h3>Ed Mall</h3>
-                    <a href="#">  <i class="fa-solid fa-chevron-right"></i></a></li>
-                    <li><h3>個人中心</h3>
-                     <a href="#"> <i class="fa-solid fa-chevron-right"></i></a></li>
-                   </ul>
-                </div>
+                  <ul class="modal-list">
+                   <li><h3>活動概覽</h3>
+                     <a href="event_register_list.html"><i class="fa-solid fa-chevron-right"></i></a></li>
+                   <li class="no-space"><h3>Ed Mall</h3>
+                   <a href="edmall.html">  <i class="fa-solid fa-chevron-right"></i></a></li>
+                   <li><h3>個人中心</h3>
+                    <a href="broadcast_message.html"> <i class="fa-solid fa-chevron-right"></i></a></li>
+                  </ul>
+               </div>
               </div>
             </div>
           </div>
