--- a/event_registration.html
+++ b/event_registration.html
@@ -135,13 +135,13 @@
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-md-flex puprple-bg">
+                      <div class="que-head d-none d-sm-flex puprple-bg event-page-head">
                         <div><h4>登記日期</h4></div>
                         <div class="exception-tab"><h4>活動報名名稱</h4></div>
                         <div><h4>活動日期</h4></div>
                         <div><h4>地點</h4></div>
                         <div><h4>費用</h4></div>
-                        <div><h4>活動詳情 </h4></div>
+                        <div><h4>出席詳情</h4></div>
                         <div><h4>活動詳情</h4></div>
                       </div>
                       <div class="que-body">
