--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                        <div class="checkbox-td">
                          <div class="ps-2 w-2">1</div>
                        <div>
-                        <label class="custom-checkbox">
-                          <input type="checkbox" class="select-all" name="select-all" />
+                        <label class="custom-checkbox" >
+                          <input type="checkbox" class="select-item" name="select-item" />
                           <span class="checkmark"></span>
                       </label>
                        </div>
@@ -209,7 +209,7 @@
                       <div class="mb-2 mobile-div1">最近觀看日期</div>
                      </div>
                      <div class="d-flex last-flex">
-                      <div class="custm-w-1 mb-2 mb-sm-0">運用擴增實境及虛擬實境技術...</div>
+                      <div class="custm-w-1 mb-2 mb-sm-0">運用擴增實境及虛擬實境技術... </div>
                       <div class="custm-w-2 mb-2 mb-sm-0">0小時31分鐘</div>
                       <div class="custm-w-3 mb-2 mb-sm-0">2019/12/20</div>
                      </div>
@@ -220,7 +220,7 @@
                        <div class="checkbox-td">
                          <div class="ps-2 w-2">2</div>
                          <label class="custom-checkbox">
-                           <input type="checkbox" class="select-all" name="select-all" />
+                           <input type="checkbox" class="select-item" name="select-item" />
                            <span class="checkmark"></span>
                        </label>
                        <div><img src="assets/images/image 4.png" alt=""></div>
@@ -245,7 +245,7 @@
                        <div class="checkbox-td">
                          <div class="ps-2 w-2">3</div>
                          <label class="custom-checkbox">
-                           <input type="checkbox" class="select-all" name="select-all" />
+                           <input type="checkbox" class="select-item" name="select-item" />
                            <span class="checkmark"></span>
                        </label>
                        <div><img src="assets/images/image 5.png" alt=""></div>
@@ -293,7 +293,10 @@
 
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="assets/js/main.js">
+     
+    </script>
+ 
   </body>
 </html>
 
