--- a/profile_edit.html
+++ b/profile_edit.html
@@ -136,7 +136,7 @@
                 </li>
               </ul>
                <h3 class="account-h3">個人信息</h3>
-               <ul  class="login-data">
+               <ul  class="login-data email-logindata">
                 <li>
                   <div class="login-detail">
                     <h4 class="latter_space">稱謂</h4>
