--- a/quotation.html
+++ b/quotation.html
@@ -136,7 +136,7 @@
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-md-flex green-bg">
+                      <div class="que-head d-none d-sm-flex green-bg qutationpage">
                         <div><h4>報價日期</h4></div>
                         <div><h4>網上報價編號</h4></div>
                         <div class="exception-tab"><h4>服務名稱</h4></div>
@@ -299,7 +299,7 @@
                   </div>
                   <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-md-flex green-bg">
+                      <div class="que-head d-none d-sm-flex green-bg qutationpage">
                         <div><h4>報價日期</h4></div>
                         <div><h4>網上報價編號</h4></div>
                         <div><h4>服務名稱</h4></div>
