--- a/quotation_inprogress.html
+++ b/quotation_inprogress.html
@@ -128,7 +128,7 @@
                   <button class="status-btn btn openPopup" data-popup="popup4" ><i class="fa-solid fa-circle-info"></i>報價情況進度詳細內容</button>
                 </div>
                 <div class="quontation-table">
-                  <div class="que-head d-none d-md-flex green-bg quatation-gap">
+                  <div class="que-head d-none d-sm-flex green-bg quatation-gap">
                     <div><h4>報價日期</h4></div>
                     <div><h4>網上報價編號</h4></div>
                     <div class="exception-tab"><h4>服務日期範圍</h4></div>
@@ -223,7 +223,7 @@
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0"> 
                     <div class="quontation-table">
-                    <div class="que-head d-none d-md-flex blue-bg  quatation-gap">
+                    <div class="que-head d-none d-sm-flex blue-bg  quatation-gap">
                       <div><h4>收據狀態</h4></div>
                       <div class="custm-quehead"><h4>收據編號</h4></div>
                       <div ><h4>發出收據日期</h4></div>
@@ -271,7 +271,7 @@
                 </div>
                   <div class="tab-pane fade show active" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0"> <div class="quontation-table">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-md-flex orange-bg quatation-gap">
+                      <div class="que-head d-none d-sm-flex orange-bg quatation-gap">
                         <div><h4>發票狀態</h4></div>
                         <div class="custm-quehead"><h4>發票編號</h4></div>
                         <div ><h4>發出發票日期</h4></div>
