--- a/registration_recorde_QR.html
+++ b/registration_recorde_QR.html
@@ -45,6 +45,17 @@
       <!-- --main-- -->
       <section class="main">
         <div class="container">
+          <div class="main-data_flex d-lg-none">
+            <div class="left-sidebar">
+                <ul class="left-sidelist ">
+                    <li><a href="broadcast_message.html"  >信息中心</a></li>
+                    <li><a href="index.html" class=" no-space" >Go eLearning</a></li>
+                    <li><a href="quotation.html" class="active">報價紀錄</a></li>
+                    <li><a href="event_registration.html">活動報名紀錄</a></li>
+                    <li><a href="profile_edit.html">個人資料</a></li>
+                </ul>
+            </div>
+            </div>
           <div class="main-data">
             <div>
               <img src="assets/images/image 1.png" class="logo-img" alt="" />
