partner.html page

--- a/dashboard_event_detail.html
+++ b/dashboard_event_detail.html
@@ -53,7 +53,7 @@
                   <a href="event_register_list.html" class="main-left-data">
                     <img src="assets/images/main1.png" alt="" />
                     <div class="main-border fix">
-                      <h3>活動概覽</h3>
+                      <h3 class="active">活動概覽</h3>
                     </div>
                   </a>
                   <a href="edmall.html" class="main-left-data">
