--- a/event_registration.html
+++ b/event_registration.html
@@ -109,8 +109,8 @@
           <div class="main-data_flex">
             <div class="left-sidebar">
                 <ul class="left-sidelist">
-                    <li><a href="broadcast_message.html"  >信息中心</a></li>
-                    <li><a href="index.html" class=" no-space" >Go eLearning</a></li>
+                    <li><a href="broadcast_message.html"  >活動概覽</a></li>
+                    <li><a href="index.html" class=" no-space" >個人資料</a></li>
                     <li><a href="quotation.html" >報價紀錄</a></li>
                     <li><a href="event_registration.html" class="active">活動報名紀錄</a></li>
                     <li><a href="profile_edit.html">個人資料</a></li>
