--- a/partner_add_event.html
+++ b/partner_add_event.html
@@ -65,7 +65,7 @@
                   <h3>EdMall</h3>
                 </div>
               </a>
-              <a href="broadcast_message.html" class="main-left-data">
+              <a href="partner_add_event.html" class="main-left-data">
                 <img src="assets/images/main3.png" alt="" />
                 <div class="main-border fix">
                   <h3 class="active" >個人中心</h3>
@@ -285,21 +285,20 @@
                                                     </label>
                                                 </div>
                                             </div>
-                                            
                                         
                                         </div>
                                         <div class="list-div">
                                             <label class="form-label">Recommend </label>
-                                            <div class="form-check">
+                                            <div class="form-check w-100">
                                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                                 <label class="form-check-label" for="exampleCheck1">Yes</label>
                                               </div>
                                         </div>
                                         <div class="list-div">
                                             <label class="form-label">Extra Filter </label>
-                                            <div class="form-check">
-                                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                                <label class="form-check-label" for="exampleCheck1">EdCity Home</label>
+                                            <div class="form-check w-100">
+                                                <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                                                <label class="form-check-label" for="exampleCheck2">EdCity Home</label>
                                               </div>
                                         </div>
                                     </form>
@@ -348,16 +347,116 @@
                                                     <label class="form-check-label" for="exampleCheck1">Use Map</label>
                                                   </div>
                                             </div>
-<div class="form-btn">
-    <button class="btn">New Timeslot</button>
-    <button class="btn">Repeat Timeslot</button>
-</div>
+                                            <div class="form-btn">
+                                              <a href="#"> <button class="btn">New Timeslot</button></a> 
+                                               <a href="#"><button class="btn">Repeat Timeslot</button></a> 
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">...</div>
+                        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+                         <div class="tab-two-data">
+                          <h3 class="tab-two-title">*必須填寫</h3>
+                          <div class="form-data">
+                            <form>
+                                <div class="form-div">
+                                  <label class="form-label">活動簡介 <span>*</span></label>
+                                 <div class="w-100">
+                                  <input type="text" class="form-control first-input"  placeholder="輸入活動簡介">
+                                  <p class="para">用作Facebook分享及匯出日曆</p>
+                                 </div>
+                              </div>
+                                <div class="form-div">
+                                  <label class="form-label">活動詳情 <span>*</span></label>
+                                 <div class="w-100">
+                                <a href="#"><button class="btn green-btn"><img src="assets/images/uplo.png" alt="">上載圖片</button></a>  
+                                  <input type="text" class="form-control"  placeholder="">
+                                  <p class="para sec-para">請填寫活動目的、詳情及報名方法等</p>
+                                 </div>
+                              </div>
+                                <div class="form-div">
+                                  <div class="width-cstm"> <label class="form-label">圖示 <span>*</span></label>
+                                    <h6 class="span-width">(280px x210px)</h6></div>
+                                 <div class="w-100">
+                                  <div class="grp-btn ">
+                                   <a href="#"><button class="btn orange-btn">從圖庫選擇</button></a> 
+                                  <a href="#"><button class="btn green-btn"><img src="assets/images/uplo.png" alt="">上載圖片</button></a>  
+                                  </div>
+
+                                 </div>
+                              </div>
+                              <div class="form-div">
+                                <label class="form-label">關鍵字詞 </label>
+                               <div class="w-100">
+                                <input type="text" class="form-control"  placeholder="輸入關鍵字詞">
+                                <p class="para">請以”輸入鍵”分隔每個關鍵詞</p>
+                               </div>
+                            </div>
+                            <div class="form-div">
+                              <label class="form-label">活動詳情 <span>*</span></label>
+                             <div class="w-100">
+                              <a href="#"><button class="btn green-btn plus-btn"><img src="assets/images/plusg.png" alt="">新增</button></a>
+                             </div>
+                          </div>
+                            </form>
+                          </div>
+                          <div class="btm-list">
+                             <h3 class="btm-title">聯絡方法</h3>
+                             <div class="list-content">
+                              <form>
+                                  <div class="btm-div">
+                                    <label class="form-label">聯絡人姓名</label>
+                                     <input type="text" class="form-control"  placeholder="輸入聯絡人姓名">
+                                </div>
+                                  <div class="btm-div">
+                                    <label class="form-label">電話</label>
+                                    <div class="grp-select">
+                                      <select class="form-select input" aria-label="Default select example">
+                                        <option selected>選擇區碼</option>
+                                        <option value="選擇區碼">選擇區碼</option>
+                                        <option value="選擇區碼">選擇區碼</option>
+                                        <option value="選擇區碼">選擇區碼</option>
+                                      </select>
+                                      <input type="text" class="form-control"  placeholder="輸入電話">
+                                    </div>
+                                </div>
+                                  <div class="btm-div">
+                                    <label class="form-label">傳真</label>
+                                    <div class="grp-select">
+                                      <select class="form-select input" aria-label="Default select example">
+                                        <option selected>選擇區碼</option>
+                                        <option value="輸入傳真">輸入傳真</option>
+                                        <option value="輸入傳真">輸入傳真</option>
+                                        <option value="輸入傳真">輸入傳真</option>
+                                      </select>
+                                      <input type="text" class="form-control"  placeholder="輸入電話">
+                                    </div>
+                                </div>
+                                <div class="btm-div">
+                                  <label class="form-label">電郵</label>
+                                   <input type="text" class="form-control"  placeholder="輸入電郵">
+                              </div>
+                                <div class="btm-div">
+                                  <label class="form-label">地址</label>
+                                   <input type="text" class="form-control"  placeholder="輸入地址">
+                              </div>
+                                <div class="btm-div">
+                                  <label class="form-label">其他聯絡資料</label>
+                                   <input type="text" class="form-control"  placeholder="">
+                              </div>
+                              </form>
+                             </div>
+                          </div>
+                          <div class="btm-btn">
+                            <a href="#" class="btn">儲存為草稿</a>
+                            <a href="#" class="btn">遞交</a>
+                            <a href="#" class="btn">發布</a>
+                            <a href="#" class="btn">隱藏</a>
+                          </div>
+                         </div>
+                        </div>
                         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">...</div>
                       </div>
                   </div>
@@ -391,11 +490,6 @@
             // Chosen
             $(".multipleChosen").chosen({
                 placeholder_text_multiple: "" // placeholder
-            });
-
-            // Select2
-            $(".multipleSelect2").select2({
-                placeholder: "title" // placeholder
             });
         });
     </script>
