--- a/event_register_list.html
+++ b/event_register_list.html
@@ -303,7 +303,9 @@
                 <div class="col-12 col-lg-6 col-xl-5 ">
                     <div class="list-slider-left">
                         <div><img src="assets/images/Group 1 (1).png" alt="" class="left-img"></div>
+                      <div>
                         <h2>教城活動</h2>
+                      </div>
                     <div class="d-flex justify-content-end d-none d-md-block"> <a href="event_registerlist_all_event.html" class="btn btn-yel-parent">更多活動</a></div>
                     </div>
                 </div>
@@ -486,7 +488,7 @@
   </div>
   <div class="strock-h2"><h2>活動推介</h2></div>
    </div>
-    <div class="text-end d-none d-sm-block"><a href="event_registerlist_all_event.html" class="btn ">更多活動</a></div>
+    <div class="text-end d-none d-md-block"><a href="event_registerlist_all_event.html" class="btn ">更多活動</a></div>
 </div>
 <div class="right-btm-data col-12 col-md-8 col-xl-10">
     <div class="slider">
@@ -716,6 +718,9 @@
           0:{
             items:1.5
           },
+            767:{
+                items:1.5
+            },
             768:{
                 items:1
             },
