--- a/dashboard_event_detail.html
+++ b/dashboard_event_detail.html
@@ -188,8 +188,8 @@
                         <li><h3>活動形式</h3><h4>講座/工作坊</h4></li>
                     </ul>
                     <ul>
-                        <li><h3>持續專業發展時數</h3><h4>1.5 小時</h4></li>
-                        <li><h3>活動內容</h3><h4 class="h4-width">中國語文教育|英國語文教育|數學教育|科學教育|科技教育|個人、社會及人文教育|藝術教育|體育|高中通識教育科|小學常識科|其他學科|特殊教育需要|STEM|電子學習|教師專業發展|親子|康樂體育|文化藝術|其他</h4></li>
+                        <li class="custm-h4-width"><h3>持續專業發展時數</h3><h4>1.5 小時</h4></li>
+                        <li ><h3>活動內容</h3><h4 class="h4-width">中國語文教育|英國語文教育|數學教育|科學教育|科技教育|個人、社會及人文教育|藝術教育|體育|高中通識教育科|小學常識科|其他學科|特殊教育需要|STEM|電子學習|教師專業發展|親子|康樂體育|文化藝術|其他</h4></li>
                     </ul>
                 </div>
             </div>
