--- a/registration_online.html
+++ b/registration_online.html
@@ -49,10 +49,10 @@
               <img src="assets/images/image 1.png" class="logo-img" alt="" />
             </div>
             <div class="main-tab-box d-none d-sm-flex">
-                  <a href="event_register_list.html" class="main-left-data">
+                  <a href="registration_online.html" class="main-left-data">
                     <img src="assets/images/main1.png" alt="" />
                     <div class="main-border fix">
-                      <h3>活動概覽</h3>
+                      <h3 class="active">活動概覽</h3>
                     </div>
                   </a>
                   <a href="edmall.html" class="main-left-data">
