--- a/quotation_inprogress.html
+++ b/quotation_inprogress.html
@@ -346,7 +346,7 @@
       <div class="title-popup-1st popup" id="popup2" >
         <div class="popup-data2">
                  <div class="close closePopup"><i class="fa-solid fa-circle-xmark"></i></div>
-               <h2 class="text-start">取消報價</h2>
+               <h2 class="text-start">上傳確認報價文件</h2>
                <div  class="text-center d-flex justify-content-center">
                <div class="upload-file">
                <div> <img src="assets/images/upload file.png" alt="">
