--- a/quotation_inprogress.html
+++ b/quotation_inprogress.html
@@ -354,7 +354,8 @@
               </div>
                </div>
                </div>
-                <button class="btn">確定</button>
+                <button class="btn openPopup" data-popup="popup3">確定</button>
+                
                </div>
       </div>
 
@@ -386,6 +387,7 @@
              </ul>
            </div>
                </div>
+      </div>
       </div>
 
         <!-- --popup--3 -->
