--- a/event_detail_registration.html
+++ b/event_detail_registration.html
@@ -136,6 +136,7 @@
                  <!-- --setp -1-- -->
                 <div class="wizard-step step-1 active ">
                  <div class="reg-form">
+                  <h3 class="reg-form-title">報名內容 (全部必須填寫）</h3>
                     <div class="form-div form-group">
                         <label>稱謂</label>
                         <select class="form-select" aria-label="Default select example">
