--- a/event_register_list.html
+++ b/event_register_list.html
@@ -120,8 +120,15 @@
             <div class="form-list position-relative">
                 <form>
                     <div class="row form-list-data ">
-                        <div class="col-12 col-sm-6 col-lg-8 col-xl-8"><div> <input type="text" class="form-control" placeholder="輸入活動關鏈字"></div></div>
-                         <div class="col-12 col-sm-6 col-lg-4 col-xl-4 d-none d-sm-block"> <div class="d-flex"><div class="btn btn1 show-advanced click-btn">進階搜尋</div><button class="btn btn2">搜尋</button></div></div>
+                        <div class="col-12 col-sm-6 col-lg-8 col-xl-8">
+                          <input type="text" class="form-control" placeholder="輸入活動關鏈字">
+                      </div>
+                         <div class="col-12 col-sm-6 col-lg-4 col-xl-4 d-none d-sm-block">
+                           <div class="d-flex">
+                            <div class="btn btn1 show-advanced click-btn">進階搜尋</div>
+                            <button class="btn btn2">搜尋</button>
+                          </div>
+                          </div>
                          <div class="col-12 custm-col12 hidden">
                             <div class="form-list-content">
                                 <div class="form-data">
@@ -141,6 +148,10 @@
                                           <input type="checkbox" class="select-all" name="select-all" />
                                           <span class="checkmark"></span>
                                       </label> 小學生</li>
+                                        <li> <label class="custom-checkbox">
+                                          <input type="checkbox" class="select-all" name="select-all" />
+                                          <span class="checkmark"></span>
+                                      </label> 中學生</li>
                                         <li> <label class="custom-checkbox">
                                           <input type="checkbox" class="select-all" name="select-all" />
                                           <span class="checkmark"></span>
@@ -174,10 +185,7 @@
                                           <input type="checkbox" class="select-all" name="select-all" />
                                           <span class="checkmark"></span>
                                       </label> 其他</li>
-                                        <li> <label class="custom-checkbox">
-                                          <input type="checkbox" class="select-all" name="select-all" />
-                                          <span class="checkmark"></span>
-                                      </label> 其他</li>
+                                      
                                     </ul>
                                 </div>
                                 <div class="form-data">
@@ -289,7 +297,15 @@
                               <img src="assets/images/ChevronDoubleUp.png" alt="">
                           </div>
                          </div>
-                         <div class="col-12 col-sm-6 col-lg-4 col-xl-3 d-sm-none mobile-show-btn"> <div class="d-flex justify-content-center"><div class="d-flex"><div class="btn btn1 show-advanced">進階搜尋</div><button class="btn btn2">搜尋</button></div>
+                         <div class="col-12 col-sm-6 col-lg-4 col-xl-3 d-sm-none mobile-show-btn">
+                           <div class="d-flex justify-content-center">
+                            <div class="d-flex">
+                              <div class="btn btn1 show-advanced">
+                                進階搜尋
+                              </div>
+                              <button class="btn btn2">搜尋</button>
+                        </div>
+                        </div>
                         </div>
                     </div>
                 </form>
