--- a/event_detail_registration.html
+++ b/event_detail_registration.html
@@ -182,7 +182,7 @@
                 </div>
                  <div class="city-info">
                     <h2>訂閱教城資訊</h2>
-                    <h3>請選擇您希望接收的電子報及活動資訊：</h3>
+                    <h3 class="city-h3">請選擇您希望接收的電子報及活動資訊：</h3>
                     <div class="subscrib-form">
                        <div class="d-flex">
                         <div class="sub-data form-div">
