--- a/edmall.html
+++ b/edmall.html
@@ -409,7 +409,7 @@
                       <input type="text" class="form-control" placeholder="電郵">
                     </div>
                     <div class="mb">
-                        <textarea class="form-control" placeholder="備註"></textarea>
+                        <textarea class="form-control" rows="5" cols="10" placeholder="備註"></textarea>
                     </div>
                     <div class="text-center">
                         <button type="button" class="btn submit-btn openPopup" data-popup="popup2">獲取報價</button>
