mobile screen chnages

--- a/dashboard_event_detail.html
+++ b/dashboard_event_detail.html
@@ -122,7 +122,7 @@
           </div>
           <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-7 col-xl-9 p-md-0">
+                <div class="col-12 col-md-7 col-xl-9 p-md-0">
                     <div class="event-detail-data">
                         <p>響應4月23日世界閱讀日，政府今年起將4月23日訂為香港全民閱讀日，並連串全港大型閱讀活動作響應，進一步向市民推廣閱讀的好處。多項推廣閱讀活動也會在中小學和社區舉行，加強校園閱讀氛圍。為此，香港教育城（教城）將於 2024年5月9日舉辦【教師持續專業發展系列︰推廣閱讀文化】研討會。屆時教城代表將為大家分享早前進行的學生閱讀習慣問卷調查結果及分析。另外，亦邀請到教師同工分享在校園中加強閱讀風氣的校本經驗，以及全民閱讀日的參與代表分享有關全民閱讀日的盛況。<br/> 詳情如下：</p>
                         <ul>
@@ -143,7 +143,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-sm-5 col-xl-3 ps-md-2">
+                <div class="col-12 col-md-5 col-xl-3 ps-md-2">
                     <div class="event-detail-right">
                     <div class="basic-info">
                         <button class="green-btn">基本資料</button>
