--- a/event_detail_registration.html
+++ b/event_detail_registration.html
@@ -238,7 +238,7 @@
                             <li>閣下的個人資料將用於是次活動/計劃報名、聯絡、意見調查、賽果公佈及安排活動/計劃一切事宜之用。</li>
                             <li>為上述目的，閣下的姓名及所屬學校/機構名稱或會在教城的網站及/或透過其他網站及/或媒體披露。教城亦可能提供或披露閣下的資料予教城的合辦機構、支持機構或傳媒。</li>
                             <li>閣下必須在註明(*)的欄目提供所需的個人資料。如閣下未能提供，教城未必可以接納閣下報名參與是次活動。而提供的個人資料純屬自願，該等資料有助教城統計及檢視服務質素。</li>
-                            <li>教城已制定收集和使用個人資料的政策，閣下有權查閱及改正教城所持關於閣下的個人資料，詳情請瀏覽http://www.hkedcity.net/dataprivacy，或向本公司職員查詢。</li>
+                            <li style="word-break: break-all;">教城已制定收集和使用個人資料的政策，閣下有權查閱及改正教城所持關於閣下的個人資料，詳情請瀏覽http://www.hkedcity.net/dataprivacy，或向本公司職員查詢。</li>
                         </ul>
                         <div class="sub-data form-div">
                             <label class="subscrib custom-checkbox">
