event_register_list.html

--- a/event_register_list.html
+++ b/event_register_list.html
@@ -120,11 +120,11 @@
             <div class="form-list position-relative">
                 <form>
                     <div class="row form-list-data ">
-                        <div class="col-12 col-sm-6 col-lg-8 col-xl-8 ">
+                        <div class="col-12 col-md-6 col-lg-8 col-xl-8 ">
                           <input type="text" class="form-control" placeholder="輸入活動關鏈字">
                       </div>
-                         <div class="col-12 col-sm-6 col-lg-4 col-xl-4 mt-4 mt-sm-0 click-btn-btn">
-                           <div class="d-flex justify-content-center justify-content-sm-end">
+                         <div class="col-12 col-md-6 col-lg-4 col-xl-4 mt-4 mt-md-0 click-btn-btn">
+                           <div class="d-flex justify-content-center justify-content-md-end">
                             <div class="btn btn1 show-advanced click-btn">進階搜尋</div>
                             <button class="btn btn2">搜尋</button>
                           </div>
@@ -293,7 +293,7 @@
                                   </ul>
                               </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-lg-4 col-xl-3 d-sm-none mobile-show-btn">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-md-none mobile-show-btn">
                               <div class="d-flex justify-content-center">
                                <div class="d-flex">
                                  <div class="btn btn1 show-advanced">
@@ -306,7 +306,6 @@
                             <div class="btm-errow show-advanced">
                               <img src="assets/images/ChevronDoubleUp.png" alt="">
                           </div>
-                       
                          </div>
                     </div>
                 </form>
@@ -317,7 +316,7 @@
       <section class="list-slider">
         <div class="container-fluid">
             <div class="row ">
-                <div class="col-12 col-lg-6 col-xl-5 ">
+                <div class="col-12 col-lg-6 col-xl-5 left-data">
                     <div class="list-slider-left">
                         <div><img src="assets/images/Group 1 (1).png" alt="" class="left-img"></div>
                       <div>
@@ -326,7 +325,7 @@
                     <div class="d-flex justify-content-end d-none d-md-block"> <a href="event_registerlist_all_event.html" class="btn btn-yel-parent">更多活動</a></div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 col-xl-7">
+                <div class="col-12 col-lg-6 col-xl-7 right-data">
                     <div class="slider">
                         <div class="owl-carousel owl-carousel1 owl-theme">
                             <div class="item">
@@ -494,7 +493,7 @@
         </div>
       </section>
 
-      <section class="">
+      <section class="btn-section">
         <div class="container">
             <div class="btm-slider row">
   <div class="left-btm-data col-12 col-md-4 col-xl-2">
