--- a/event_registration.html
+++ b/event_registration.html
@@ -135,7 +135,7 @@
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-sm-flex puprple-bg event-page-head">
+                      <div class="que-head d-none d-md-flex puprple-bg event-page-head">
                         <div><h4>登記日期</h4></div>
                         <div class="exception-tab"><h4>活動報名名稱</h4></div>
                         <div><h4>活動日期</h4></div>
@@ -151,9 +151,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/05/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>沙田沙角邨香港教育城</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="registration_recorde_QR.html" class="btn register-btn pink-btn">活動詳情</a></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
-                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="registration_recorde_QR.html" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="registration_recorde_QR.html" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-md-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="registration_recorde_QR.html" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/03/12</h4></div>
@@ -161,9 +161,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/06/28</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="registration_recorde_online.html" class="btn register-btn pink-btn">活動詳情</a></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
-                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="registration_recorde_online.html" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="registration_recorde_online.html" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-md-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="registration_recorde_online.html" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/02/08</h4></div>
@@ -171,9 +171,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
-                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-md-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -181,9 +181,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
-                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>         
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-md-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>         
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -191,9 +191,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/07/12</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>消費者委員會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
-                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-md-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/02/08</h4></div>
@@ -201,9 +201,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
-                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-md-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -211,9 +211,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/07/12</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>消費者委員會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
-                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>         
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-md-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-md-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>         
                         </div>
                       </div>
                     </div>
