--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="rightside-title">
                   <h2>Go eLearning</h2>
                 </div>
-                <div class="d-flex justify-content-center justify-content-sm-end yellow-btn container">
+                <div class="d-flex justify-content-center justify-content-md-end yellow-btn container">
                   <a href="#" class="btn"><span>連接到</span> Go eLearning</a>
                 </div>
                 <div class="content">
@@ -141,19 +141,19 @@
                     </div>
                   </div>
                   <div class="row table-nav align-items-center ps-3 pe-3">
-                    <div class="col-12 col-sm-3 order-0 p-0">
+                    <div class="col-12 col-md-3 order-0 p-0">
                       <div class="watch-history">
                         <h3 class="watch-history-h3">觀看紀錄</h3>
                      </div>
                     </div>
-                    <div class="col-12 col-sm-9 order-2 order-sm-1 justify-content-sm-end d-flex p-0">
+                    <div class="col-12 col-md-9 order-2 order-md-1 justify-content-md-end d-flex p-0">
                       <div class="hours-div ">
                        <div class="d-flex gap-2"> <h2>我的觀看時數：</h2>
                         <h2>4小時5分鐘</h2></div>
                         <button class="btn">列印紀錄</button>
                      </div>
                     </div>
-                    <div class="col-12 order-1 order-sm-2 p-0">
+                    <div class="col-12 order-1 order-md-2 p-0">
                       <div class="date-range">
                         <h3>日期範圍 </h3>
                         <form class="d-flex gap-1 align-items-center">
@@ -180,9 +180,9 @@
                        </div>
                       <div>
                       </div>
-                      <h3 class="ms-4 mt-2 d-sm-none ">全選</h3>
+                      <h3 class="ms-4 mt-2 d-md-none ">全選</h3>
                     </div>
-                    <div class="d-flex last-flex d-none d-sm-flex">
+                    <div class="d-flex last-flex d-none d-md-flex">
                       <div class="custm-w-1">節目名稱</div>
                       <div class="custm-w-2">我的觀看時數</div>
                       <div class="custm-w-3">最近觀看日期</div>
@@ -203,15 +203,15 @@
                       <div></div>
                     </div>
                     <div class="mobile-table-data">
-                     <div class="d-sm-none">
+                     <div class="d-md-none">
                       <div class="mb-2 mobile-div1">節目名稱...</div>
                       <div class="mb-2 mobile-div1">我的觀看時數</div>
                       <div class="mb-2 mobile-div1">最近觀看日期</div>
                      </div>
                      <div class="d-flex last-flex">
-                      <div class="custm-w-1 mb-2 mb-sm-0">運用擴增實境及虛擬實境技術... </div>
-                      <div class="custm-w-2 mb-2 mb-sm-0">0小時31分鐘</div>
-                      <div class="custm-w-3 mb-2 mb-sm-0">2019/12/20</div>
+                      <div class="custm-w-1 mb-2 mb-md-0">運用擴增實境及虛擬實境技術... </div>
+                      <div class="custm-w-2 mb-2 mb-md-0">0小時31分鐘</div>
+                      <div class="custm-w-3 mb-2 mb-md-0">2019/12/20</div>
                      </div>
                     </div>
                    </div>
@@ -228,15 +228,15 @@
                       <div></div>
                     </div>
                     <div class="mobile-table-data">
-                      <div class="d-sm-none">
+                      <div class="d-md-none">
                        <div class="mb-2 mobile-div1">節目名稱...</div>
                        <div class="mb-2 mobile-div1">我的觀看時數</div>
                        <div class="mb-2 mobile-div1">最近觀看日期</div>
                       </div>
                       <div class="d-flex last-flex">
-                       <div class="custm-w-1 mb-2 mb-sm-0">如何使用影片製作AR</div>
-                       <div class="custm-w-2 mb-2 mb-sm-0">0小時2分鐘</div>
-                       <div class="custm-w-3 mb-2 mb-sm-0">2019/12/20</div>
+                       <div class="custm-w-1 mb-2 mb-md-0">如何使用影片製作AR</div>
+                       <div class="custm-w-2 mb-2 mb-md-0">0小時2分鐘</div>
+                       <div class="custm-w-3 mb-2 mb-md-0">2019/12/20</div>
                       </div>
                      </div>
                    </div>
@@ -253,15 +253,15 @@
                       <div></div>
                     </div>
                     <div class="mobile-table-data">
-                     <div class="d-sm-none">
+                     <div class="d-md-none">
                       <div class="mb-2 mobile-div1">節目名稱...</div>
                       <div class="mb-2 mobile-div1">我的觀看時數</div>
                       <div class="mb-2 mobile-div1">最近觀看日期</div>
                      </div>
                      <div class="d-flex last-flex">
-                      <div class="custm-w-1 mb-2 mb-sm-0">教師專業交流月2018論壇...</div>
-                      <div class="custm-w-2 mb-2 mb-sm-0">1小時42分鐘</div>
-                      <div class="custm-w-3 mb-2 mb-sm-0">2018/10/07</div>
+                      <div class="custm-w-1 mb-2 mb-md-0">教師專業交流月2018論壇...</div>
+                      <div class="custm-w-2 mb-2 mb-md-0">1小時42分鐘</div>
+                      <div class="custm-w-3 mb-2 mb-md-0">2018/10/07</div>
                      </div>
                     </div>
                    </div>
