profile_edit.html

--- a/quotation_inprogress.html
+++ b/quotation_inprogress.html
@@ -122,13 +122,13 @@
                  <button class="btn openPopup" data-popup="popup2">上傳確認報價文件</button>
                 </div>
                 <div class="quotation-status">
-                  <div class="detail-title d-none d-sm-block">
+                  <div class="detail-title d-none d-md-block">
                     <h2 class="ps-4">報價情況</h2>
                   </div>
                   <button class="status-btn btn openPopup" data-popup="popup4" ><i class="fa-solid fa-circle-info"></i>報價情況進度詳細內容</button>
                 </div>
                 <div class="quontation-table">
-                  <div class="que-head d-none d-sm-flex green-bg quatation-gap">
+                  <div class="que-head d-none d-md-flex green-bg quatation-gap">
                     <div><h4>報價日期</h4></div>
                     <div><h4>網上報價編號</h4></div>
                     <div class="exception-tab"><h4>服務日期範圍</h4></div>
@@ -143,7 +143,7 @@
                         <div class="que-gray-flex exception-tab"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                         <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                         <div class="que-gray-flex"><h3>報價金額</h3><h4>$3950.00</h4></div>
-                        <div class="que-gray-flex d-none d-sm-flex"> 
+                        <div class="que-gray-flex d-none d-md-flex"> 
                           <div class="action-td">
                             <div class="dropdown">
                               <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -156,7 +156,7 @@
                             </div>
                           
                       </div></div>
-                      <div  class="que-gray-flex d-sm-none action-mobile justify-content-center">
+                      <div  class="que-gray-flex d-md-none action-mobile justify-content-center">
                         <div class="action-btn gray-btn">
                           <div class="dropdown w-auto ">
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -176,10 +176,10 @@
                   <div class="progress-data">
                   <div class="bookdata">
                     <div class="row">
-                      <div class="col-12 col-sm-6">
+                      <div class="col-12 col-md-6">
                         <div class="progress-img"><img src="assets/images/im.png" alt=""></div>
                       </div>
-                      <div class="col-12 col-sm-6">
+                      <div class="col-12 col-md-6">
                         <div class="progress-right">
                           <h2>  教城閱讀組合 23/24</h2>
                           <ul>
@@ -223,7 +223,7 @@
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0"> 
                     <div class="quontation-table">
-                    <div class="que-head d-none d-sm-flex blue-bg  quatation-gap">
+                    <div class="que-head d-none d-md-flex blue-bg  quatation-gap">
                       <div><h4>收據狀態</h4></div>
                       <div class="custm-quehead"><h4>收據編號</h4></div>
                       <div ><h4>發出收據日期</h4></div>
