--- a/quotation_inprogress.html
+++ b/quotation_inprogress.html
@@ -236,11 +236,11 @@
                           <div class="que-gray-flex custm-quehead"><h3>收據編號</h3><h4>S0A056434-INV-01</h4></div>
                           <div class="que-gray-flex "><h3>發出收據日期</h3><h4>2023/10/16</h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2950.00</h4></div>
-                          <div class="que-gray-flex d-none d-sm-flex custm-down justify-content-end"> 
+                          <div class="que-gray-flex d-none d-md-flex custm-down justify-content-end"> 
                             <div class="action-td custm-que-action">
                             <img src="assets/images/dowonload.png" alt="">
                         </div></div>
-                        <div  class="que-gray-flex d-sm-none action-mobile justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile justify-content-center">
                           <div class="action-btn gray-btn"> <div class="dropdown w-auto ">
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                               <img src="assets/images/dowonload.png" alt=""> <span>下載</span>
@@ -257,11 +257,11 @@
                           <div class="que-gray-flex custm-quehead"><h3>收據編號</h3><h4>S0A056434-INV-02</h4></div>
                           <div class="que-gray-flex "><h3>發出收據日期</h3><h4>2023/12/16</h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$1000.00</h4></div>
-                          <div class="que-gray-flex d-none d-sm-flex custm-down justify-content-end"> 
+                          <div class="que-gray-flex d-none d-md-flex custm-down justify-content-end"> 
                             <div class="action-td custm-que-action">
                             <img src="assets/images/dowonload.png" alt="">
                         </div></div>
-                        <div  class="que-gray-flex d-sm-none action-mobile justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile justify-content-center">
                           <div class="action-btn gray-btn">
                             <img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                         </div>
@@ -271,7 +271,7 @@
                 </div>
                   <div class="tab-pane fade show active" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0"> <div class="quontation-table">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-sm-flex orange-bg quatation-gap">
+                      <div class="que-head d-none d-md-flex orange-bg quatation-gap">
                         <div><h4>發票狀態</h4></div>
                         <div class="custm-quehead"><h4>發票編號</h4></div>
                         <div ><h4>發出發票日期</h4></div>
@@ -284,11 +284,11 @@
                             <div class="que-gray-flex custm-quehead"><h3>收據編號</h3><h4>S0A056434-REC-01</h4></div>
                             <div class="que-gray-flex "><h3>發出收據日期</h3><h4>2023/10/20</h4></div>
                             <div class="que-gray-flex"><h3>報價金額</h3><h4>$2950.00</h4></div>
-                            <div class="que-gray-flex d-none d-sm-flex custm-down justify-content-end"> 
+                            <div class="que-gray-flex d-none d-md-flex custm-down justify-content-end"> 
                               <div class="action-td custm-que-action">
                               <img src="assets/images/dowonload.png" alt="">
                           </div></div>
-                          <div  class="que-gray-flex d-sm-none action-mobile justify-content-center">
+                          <div  class="que-gray-flex d-md-none action-mobile justify-content-center">
                             <div class="action-btn gray-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                           </div>
                           </div>
